# final-project-gameengine

./: .gitignore  CMakeLists.txt  flake.nix  plan.txt
.cache/clangd/index/: Engine.cpp.314459D3BB4B932E.idx  Engine.hpp.6FD765EBEBEA6600.idx  EngineObject.cpp.1FC82E46AE0DFE72.idx  EngineObject.hpp.658E27300C728E4D.idx  Entity.cpp.5F1D4FBF9E557B51.idx  Entity.hpp.A0F783C390B6A8CB.idx  GraphicsSystem.cpp.32C3F4AE26F03329.idx  Logging.cpp.8BF99E7D9A4396A6.idx  Logging.hpp.51BD19CDC0276371.idx  Platform.hpp.6AFAC1CFBF328B87.idx  System.cpp.68A44A46DA8FF86C.idx  System.hpp.56DFDAAD59F4CE3C.idx  UUID.cpp.38785A8389746D8E.idx  UUID.hpp.CA1E9206BB878EDA.idx  Util.hpp.DA5C7DC2A2E32444.idx  World.cpp.549F30C53261D29F.idx  World.hpp.4F0D19948C143F5A.idx  algorithm.hpp.BD8CE9F17068FDA8.idx  ansicolor_sink-inl.h.0C76B18204F278F5.idx  ansicolor_sink.h.A63FACEE320C8A92.idx  any.hpp.3A3383551F3F3ABD.idx  async.cpp.E9735FF4DC83F993.idx  async.h.19C3DE60F5E7421B.idx  async_logger-inl.h.EA865E5EA37D6D07.idx  async_logger.h.723FA0743A46070E.idx  attribute.h.6DF59AE4250D0682.idx  backtracer-inl.h.AA080E625037665A.idx  backtracer.h.2CE030029F602160.idx  base.h.1973ADC1BE11C44E.idx  base_sink-inl.h.E978D5187F9F7B58.idx  base_sink.h.5655B33F5ADFC672.idx  (+81 more)
editor/: CMakeLists.txt
editor/editor/: main.cpp
kon/: CMakeLists.txt
kon/kon/core/: Engine.cpp  Engine.hpp  EngineObject.cpp  EngineObject.hpp  Logging.cpp  Logging.hpp  Platform.hpp  UUID.cpp  UUID.hpp  Util.hpp
kon/kon/graphics/: GraphicsSystem.hpp
kon/kon/system/: Entity.cpp  Entity.hpp  System.cpp  System.hpp  World.cpp  World.hpp
